정리 및 라우터 교체

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 	<title>Svelte app</title>
+	<!-- rollup-plugin-generate-html-template을 사용하면
+	여기에 자동으로 bundle.js 파일이 주입된다. -->
 </head>
 <body>
 </body>
