--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
-	<title>Svelte app</title>
-</head>
-<body>
-<script  src="build/bundle.js"></script>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <title>Svelte app</title>
+        <!-- 
+			rollup-plugin-generate-html-template을 사용하면
+			여기에 자동으로 bundle.js 파일이 주입된다.
+			근데, src="build/bundle.js"와 같이 삽입되어서 라우팅할 때 동작하지 않는다. 
+			아래와 같이 /build/bundle.js로 삽입되어야 한다. 
+			script 에는 defer를 반드시 붙인다. body를 못 찾는다. 
+			body 안에 넣을 때는 defer를 생략해도 된다. 
+     	-->
+        <script defer src="/build/bundle.js"></script>
+    </head>
+    <body></body>
 </html>
