--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 			script 에는 defer를 반드시 붙인다. body를 못 찾는다. 
 			body 안에 넣을 때는 defer를 생략해도 된다. 
      	-->
-        <script defer src="/build/bundle.js"></script>
+        <script defer src="/build/main-es.js" type="module"></script>
     </head>
     <body></body>
 </html>
